# mypy-issue

./: README.md  example.py  example_ok.py  mypy.ini  plugin_1.py  pyproject.toml  strawberry.py
